--- a/notebooks/phase_envelope_whitson_ex18.ipynb
+++ b/notebooks/phase_envelope_whitson_ex18.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
       "P = 1000000.0 \t T = 150.0 \t phase split = False\n",
       "P = 1000000.0 \t T = 175.0 \t phase split = False\n",
       "P = 1000000.0 \t T = 200.0 \t phase split = False\n",
-      "P = 1000000.0 \t T = 225.0 \t phase split = True\n",
+      "P = 1000000.0 \t T = 225.0 \t phase split = False\n",
       "P = 1000000.0 \t T = 250.0 \t phase split = True\n",
       "P = 1000000.0 \t T = 275.0 \t phase split = True\n",
       "P = 1000000.0 \t T = 300.0 \t phase split = True\n",
@@ -133,7 +133,7 @@
       "P = 1928571.4285714286 \t T = 150.0 \t phase split = False\n",
       "P = 1928571.4285714286 \t T = 175.0 \t phase split = False\n",
       "P = 1928571.4285714286 \t T = 200.0 \t phase split = False\n",
-      "P = 1928571.4285714286 \t T = 225.0 \t phase split = True\n",
+      "P = 1928571.4285714286 \t T = 225.0 \t phase split = False\n",
       "P = 1928571.4285714286 \t T = 250.0 \t phase split = True\n",
       "P = 1928571.4285714286 \t T = 275.0 \t phase split = True\n",
       "P = 1928571.4285714286 \t T = 300.0 \t phase split = True\n",
@@ -148,7 +148,7 @@
       "P = 2857142.8571428573 \t T = 150.0 \t phase split = False\n",
       "P = 2857142.8571428573 \t T = 175.0 \t phase split = False\n",
       "P = 2857142.8571428573 \t T = 200.0 \t phase split = False\n",
-      "P = 2857142.8571428573 \t T = 225.0 \t phase split = False\n",
+      "P = 2857142.8571428573 \t T = 225.0 \t phase split = True\n",
       "P = 2857142.8571428573 \t T = 250.0 \t phase split = True\n",
       "P = 2857142.8571428573 \t T = 275.0 \t phase split = True\n",
       "P = 2857142.8571428573 \t T = 300.0 \t phase split = True\n",
@@ -179,7 +179,7 @@
       "P = 4714285.714285715 \t T = 175.0 \t phase split = False\n",
       "P = 4714285.714285715 \t T = 200.0 \t phase split = False\n",
       "P = 4714285.714285715 \t T = 225.0 \t phase split = False\n",
-      "P = 4714285.714285715 \t T = 250.0 \t phase split = True\n",
+      "P = 4714285.714285715 \t T = 250.0 \t phase split = False\n",
       "P = 4714285.714285715 \t T = 275.0 \t phase split = True\n",
       "P = 4714285.714285715 \t T = 300.0 \t phase split = True\n",
       "P = 4714285.714285715 \t T = 325.0 \t phase split = True\n",
@@ -210,7 +210,7 @@
       "P = 6571428.571428571 \t T = 200.0 \t phase split = False\n",
       "P = 6571428.571428571 \t T = 225.0 \t phase split = False\n",
       "P = 6571428.571428571 \t T = 250.0 \t phase split = False\n",
-      "P = 6571428.571428571 \t T = 275.0 \t phase split = False\n",
+      "P = 6571428.571428571 \t T = 275.0 \t phase split = True\n",
       "P = 6571428.571428571 \t T = 300.0 \t phase split = True\n",
       "P = 6571428.571428571 \t T = 325.0 \t phase split = True\n",
       "P = 6571428.571428571 \t T = 350.0 \t phase split = True\n",
@@ -225,7 +225,7 @@
       "P = 7500000.0 \t T = 200.0 \t phase split = False\n",
       "P = 7500000.0 \t T = 225.0 \t phase split = False\n",
       "P = 7500000.0 \t T = 250.0 \t phase split = False\n",
-      "P = 7500000.0 \t T = 275.0 \t phase split = True\n",
+      "P = 7500000.0 \t T = 275.0 \t phase split = False\n",
       "P = 7500000.0 \t T = 300.0 \t phase split = True\n",
       "P = 7500000.0 \t T = 325.0 \t phase split = True\n",
       "P = 7500000.0 \t T = 350.0 \t phase split = True\n",
@@ -256,7 +256,7 @@
       "P = 9357142.857142856 \t T = 225.0 \t phase split = False\n",
       "P = 9357142.857142856 \t T = 250.0 \t phase split = False\n",
       "P = 9357142.857142856 \t T = 275.0 \t phase split = False\n",
-      "P = 9357142.857142856 \t T = 300.0 \t phase split = False\n",
+      "P = 9357142.857142856 \t T = 300.0 \t phase split = True\n",
       "P = 9357142.857142856 \t T = 325.0 \t phase split = True\n",
       "P = 9357142.857142856 \t T = 350.0 \t phase split = True\n",
       "P = 9357142.857142856 \t T = 375.0 \t phase split = True\n",
@@ -278,7 +278,7 @@
       "P = 10285714.285714285 \t T = 250.0 \t phase split = False\n",
       "P = 10285714.285714285 \t T = 275.0 \t phase split = False\n",
       "P = 10285714.285714285 \t T = 300.0 \t phase split = False\n",
-      "P = 10285714.285714285 \t T = 325.0 \t phase split = True\n",
+      "P = 10285714.285714285 \t T = 325.0 \t phase split = False\n",
       "P = 10285714.285714285 \t T = 350.0 \t phase split = True\n",
       "P = 10285714.285714285 \t T = 375.0 \t phase split = True\n",
       "P = 10285714.285714285 \t T = 400.0 \t phase split = True\n",
@@ -351,10 +351,330 @@
     {
      "data": {
       "text/plain": [
-       "{'P': 14000000.0, 'T': 500.0, 'phase_split': False}"
+       "{'P': array([ 1000000.        ,  1000000.        ,  1000000.        ,\n",
+       "         1000000.        ,  1000000.        ,  1000000.        ,\n",
+       "         1000000.        ,  1000000.        ,  1000000.        ,\n",
+       "         1000000.        ,  1000000.        ,  1000000.        ,\n",
+       "         1000000.        ,  1000000.        ,  1000000.        ,\n",
+       "         1928571.42857143,  1928571.42857143,  1928571.42857143,\n",
+       "         1928571.42857143,  1928571.42857143,  1928571.42857143,\n",
+       "         1928571.42857143,  1928571.42857143,  1928571.42857143,\n",
+       "         1928571.42857143,  1928571.42857143,  1928571.42857143,\n",
+       "         1928571.42857143,  1928571.42857143,  1928571.42857143,\n",
+       "         2857142.85714286,  2857142.85714286,  2857142.85714286,\n",
+       "         2857142.85714286,  2857142.85714286,  2857142.85714286,\n",
+       "         2857142.85714286,  2857142.85714286,  2857142.85714286,\n",
+       "         2857142.85714286,  2857142.85714286,  2857142.85714286,\n",
+       "         2857142.85714286,  2857142.85714286,  2857142.85714286,\n",
+       "         3785714.28571429,  3785714.28571429,  3785714.28571429,\n",
+       "         3785714.28571429,  3785714.28571429,  3785714.28571429,\n",
+       "         3785714.28571429,  3785714.28571429,  3785714.28571429,\n",
+       "         3785714.28571429,  3785714.28571429,  3785714.28571429,\n",
+       "         3785714.28571429,  3785714.28571429,  3785714.28571429,\n",
+       "         4714285.71428571,  4714285.71428571,  4714285.71428571,\n",
+       "         4714285.71428571,  4714285.71428571,  4714285.71428571,\n",
+       "         4714285.71428571,  4714285.71428571,  4714285.71428571,\n",
+       "         4714285.71428571,  4714285.71428571,  4714285.71428571,\n",
+       "         4714285.71428571,  4714285.71428571,  4714285.71428571,\n",
+       "         5642857.14285714,  5642857.14285714,  5642857.14285714,\n",
+       "         5642857.14285714,  5642857.14285714,  5642857.14285714,\n",
+       "         5642857.14285714,  5642857.14285714,  5642857.14285714,\n",
+       "         5642857.14285714,  5642857.14285714,  5642857.14285714,\n",
+       "         5642857.14285714,  5642857.14285714,  5642857.14285714,\n",
+       "         6571428.57142857,  6571428.57142857,  6571428.57142857,\n",
+       "         6571428.57142857,  6571428.57142857,  6571428.57142857,\n",
+       "         6571428.57142857,  6571428.57142857,  6571428.57142857,\n",
+       "         6571428.57142857,  6571428.57142857,  6571428.57142857,\n",
+       "         6571428.57142857,  6571428.57142857,  6571428.57142857,\n",
+       "         7500000.        ,  7500000.        ,  7500000.        ,\n",
+       "         7500000.        ,  7500000.        ,  7500000.        ,\n",
+       "         7500000.        ,  7500000.        ,  7500000.        ,\n",
+       "         7500000.        ,  7500000.        ,  7500000.        ,\n",
+       "         7500000.        ,  7500000.        ,  7500000.        ,\n",
+       "         8428571.42857143,  8428571.42857143,  8428571.42857143,\n",
+       "         8428571.42857143,  8428571.42857143,  8428571.42857143,\n",
+       "         8428571.42857143,  8428571.42857143,  8428571.42857143,\n",
+       "         8428571.42857143,  8428571.42857143,  8428571.42857143,\n",
+       "         8428571.42857143,  8428571.42857143,  8428571.42857143,\n",
+       "         9357142.85714286,  9357142.85714286,  9357142.85714286,\n",
+       "         9357142.85714286,  9357142.85714286,  9357142.85714286,\n",
+       "         9357142.85714286,  9357142.85714286,  9357142.85714286,\n",
+       "         9357142.85714286,  9357142.85714286,  9357142.85714286,\n",
+       "         9357142.85714286,  9357142.85714286,  9357142.85714286,\n",
+       "        10285714.28571429, 10285714.28571429, 10285714.28571429,\n",
+       "        10285714.28571429, 10285714.28571429, 10285714.28571429,\n",
+       "        10285714.28571429, 10285714.28571429, 10285714.28571429,\n",
+       "        10285714.28571429, 10285714.28571429, 10285714.28571429,\n",
+       "        10285714.28571429, 10285714.28571429, 10285714.28571429,\n",
+       "        11214285.71428571, 11214285.71428571, 11214285.71428571,\n",
+       "        11214285.71428571, 11214285.71428571, 11214285.71428571,\n",
+       "        11214285.71428571, 11214285.71428571, 11214285.71428571,\n",
+       "        11214285.71428571, 11214285.71428571, 11214285.71428571,\n",
+       "        11214285.71428571, 11214285.71428571, 11214285.71428571,\n",
+       "        12142857.14285714, 12142857.14285714, 12142857.14285714,\n",
+       "        12142857.14285714, 12142857.14285714, 12142857.14285714,\n",
+       "        12142857.14285714, 12142857.14285714, 12142857.14285714,\n",
+       "        12142857.14285714, 12142857.14285714, 12142857.14285714,\n",
+       "        12142857.14285714, 12142857.14285714, 12142857.14285714,\n",
+       "        13071428.57142857, 13071428.57142857, 13071428.57142857,\n",
+       "        13071428.57142857, 13071428.57142857, 13071428.57142857,\n",
+       "        13071428.57142857, 13071428.57142857, 13071428.57142857,\n",
+       "        13071428.57142857, 13071428.57142857, 13071428.57142857,\n",
+       "        13071428.57142857, 13071428.57142857, 13071428.57142857,\n",
+       "        14000000.        , 14000000.        , 14000000.        ,\n",
+       "        14000000.        , 14000000.        , 14000000.        ,\n",
+       "        14000000.        , 14000000.        , 14000000.        ,\n",
+       "        14000000.        , 14000000.        , 14000000.        ,\n",
+       "        14000000.        , 14000000.        , 14000000.        ]),\n",
+       " 'T': array([150., 175., 200., 225., 250., 275., 300., 325., 350., 375., 400.,\n",
+       "        425., 450., 475., 500., 150., 175., 200., 225., 250., 275., 300.,\n",
+       "        325., 350., 375., 400., 425., 450., 475., 500., 150., 175., 200.,\n",
+       "        225., 250., 275., 300., 325., 350., 375., 400., 425., 450., 475.,\n",
+       "        500., 150., 175., 200., 225., 250., 275., 300., 325., 350., 375.,\n",
+       "        400., 425., 450., 475., 500., 150., 175., 200., 225., 250., 275.,\n",
+       "        300., 325., 350., 375., 400., 425., 450., 475., 500., 150., 175.,\n",
+       "        200., 225., 250., 275., 300., 325., 350., 375., 400., 425., 450.,\n",
+       "        475., 500., 150., 175., 200., 225., 250., 275., 300., 325., 350.,\n",
+       "        375., 400., 425., 450., 475., 500., 150., 175., 200., 225., 250.,\n",
+       "        275., 300., 325., 350., 375., 400., 425., 450., 475., 500., 150.,\n",
+       "        175., 200., 225., 250., 275., 300., 325., 350., 375., 400., 425.,\n",
+       "        450., 475., 500., 150., 175., 200., 225., 250., 275., 300., 325.,\n",
+       "        350., 375., 400., 425., 450., 475., 500., 150., 175., 200., 225.,\n",
+       "        250., 275., 300., 325., 350., 375., 400., 425., 450., 475., 500.,\n",
+       "        150., 175., 200., 225., 250., 275., 300., 325., 350., 375., 400.,\n",
+       "        425., 450., 475., 500., 150., 175., 200., 225., 250., 275., 300.,\n",
+       "        325., 350., 375., 400., 425., 450., 475., 500., 150., 175., 200.,\n",
+       "        225., 250., 275., 300., 325., 350., 375., 400., 425., 450., 475.,\n",
+       "        500., 150., 175., 200., 225., 250., 275., 300., 325., 350., 375.,\n",
+       "        400., 425., 450., 475., 500.]),\n",
+       " 'phase_split': [False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  True,\n",
+       "  True,\n",
+       "  True,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False,\n",
+       "  False]}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,14 +683,19 @@
     "P_range = np.linspace(1e6, 140e5, 15)\n",
     "T_range = np.linspace(150., 500., 15)\n",
     "\n",
-    "phase_split_data = {}\n",
+    "P_data = np.array([])\n",
+    "T_data = np.array([])\n",
+    "split_data = []\n",
     "for P in P_range:\n",
     "    for T in T_range:\n",
     "        result = stability_test(model, P, T, z, monitor=False)\n",
-    "        phase_split_data = {'P': P, 'T': T, 'phase_split': result.phase_split}\n",
+    "        P_data = np.append(P_data, P)\n",
+    "        T_data = np.append(T_data, T)\n",
+    "        split_data.append(result.phase_split)\n",
     "        print(f'P = {P} \\t T = {T} \\t phase split = {result.phase_split}')\n",
     "        \n",
-    "# phase_split_data"
+    "phase_split_data = {'P': P_data, 'T': T_data, 'phase_split': split_data}\n",
+    "phase_split_data"
    ]
   }
  ],
