Update repo test infra

--- a/notebooks/phase_stability.ipynb
+++ b/notebooks/phase_stability.ipynb
@@ -121,14 +121,21 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/volps/gibbs/gibbs/models/ceos.py:158: RuntimeWarning: invalid value encountered in log\n",
+      "  second_term = np.log(Z_factor - B)\n",
+      "/home/volps/gibbs/gibbs/models/ceos.py:161: RuntimeWarning: invalid value encountered in log\n",
+      "  (Z_factor + (1 + sqrted_2) * B) / (Z_factor + (1 - sqrted_2) * B)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
     }
    ],
    "source": [
@@ -137,7 +144,7 @@
     "\n",
     "result = stability_test(model, P, T, z)\n",
     "\n",
-    "result.phase_split"
+    "print(result.phase_split)"
    ]
   }
  ],
