Add warning ignore in stability test ipynb

--- a/notebooks/phase_stability.ipynb
+++ b/notebooks/phase_stability.ipynb
@@ -32,9 +32,12 @@
    "source": [
     "import attr\n",
     "import numpy as np\n",
+    "import warnings\n",
     "\n",
     "from gibbs.models.ceos import PengRobinson78\n",
-    "from gibbs.stability_analysis import stability_test"
+    "from gibbs.stability_analysis import stability_test\n",
+    "\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -120,16 +123,6 @@
    "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/volps/gibbs/gibbs/models/ceos.py:158: RuntimeWarning: invalid value encountered in log\n",
-      "  second_term = np.log(Z_factor - B)\n",
-      "/home/volps/gibbs/gibbs/models/ceos.py:161: RuntimeWarning: invalid value encountered in log\n",
-      "  (Z_factor + (1 + sqrted_2) * B) / (Z_factor + (1 - sqrted_2) * B)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
