Fix ipynb phase stability

--- a/notebooks/phase_stability.ipynb
+++ b/notebooks/phase_stability.ipynb
@@ -35,6 +35,7 @@
     "import warnings\n",
     "\n",
     "from gibbs.models.ceos import PengRobinson78\n",
+    "from gibbs.mixture import Mixture\n",
     "from gibbs.stability_analysis import stability_test\n",
     "\n",
     "warnings.filterwarnings('ignore')"
@@ -60,14 +61,20 @@
     "    Pc: np.ndarray\n",
     "    acentric_factor: np.ndarray\n",
     "    bip: np.ndarray\n",
+    "        \n",
+    "    @property\n",
+    "    def mixture(self):\n",
+    "        return Mixture(\n",
+    "            z=self.z, \n",
+    "            Tc=self.Tc, \n",
+    "            Pc=self.Pc, \n",
+    "            acentric_factor=self.acentric_factor\n",
+    "        )\n",
     "\n",
     "    @property\n",
     "    def model(self):\n",
     "        return PengRobinson78(\n",
-    "            z=self.z, \n",
-    "            Tc=self.Tc, \n",
-    "            Pc=self.Pc, \n",
-    "            acentric_factor=self.acentric_factor, \n",
+    "            mixture=self.mixture,\n",
     "            bip=self.bip\n",
     "        )\n",
     "\n",
